<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Stocks</string>
    <string name="BP">BP Amoco</string>
    <string name="HSBC">HSBC</string>
    <string name="EXP">Experian</string>
    <string name="ms">Marks and Spencer</string>
    <string name="SM">Smith and Nephew</string>
    <string name="sp">   </string>
    <string name="SP">Share Price</string>
    <string name="tot">TOTAL</string>
    <string name="gt">Grand Total</string>
    <string name="t">Total</string>
    <string name="esp">                                  </string>
    <string name="bw">Bowleven</string>
    <string name="stat">Status</string>
    <string name="pf">Portfolio</string>
    <string name="inter">Connection Status:   </string>
</resources>
