<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_weight="0.62" android:orientation="vertical" android:layout_height="wrap_content">
    <TextView android:textSize="40px" android:id="@+id/textView1" android:text="@string/stat" android:layout_width="fill_parent" android:paddingLeft="110dp" android:layout_height="72dp"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/inter" android:layout_width="fill_parent" android:id="@+id/txtStat" android:textStyle="bold"></TextView>
    <TextView android:text="@string/sp" android:id="@+id/txtBP" android:textSize="19px" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
    
    <TextView android:text="@string/sp" android:layout_height="wrap_content" android:textStyle="bold" android:textSize="19px" android:id="@+id/txtHSBC" android:layout_width="fill_parent"></TextView>
    <TextView android:text="@string/sp" android:layout_height="wrap_content" android:textStyle="bold" android:textSize="19px" android:id="@+id/txtEXP" android:layout_width="fill_parent"></TextView>
    <TextView android:text="@string/sp" android:layout_height="wrap_content" android:textStyle="bold" android:textSize="19px" android:id="@+id/txtMS" android:layout_width="fill_parent"></TextView>
    <TextView android:text="@string/sp" android:layout_height="wrap_content" android:textStyle="bold" android:textSize="19px" android:id="@+id/txtSN" android:layout_width="fill_parent"></TextView>
    <TextView android:text="@string/sp" android:id="@+id/txtGT" android:textSize="19px" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
    <TextView android:text="@string/sp" android:layout_height="wrap_content" android:textStyle="bold" android:textSize="19px" android:id="@+id/txtBLVN" android:layout_width="fill_parent"></TextView>
    </LinearLayout>

